# L3-Automaton-Library

./: .gitignore  Automaton.cc  Automaton.h  AutomatonBIS.cc  CMakeLists.txt  Test_Performances.ipynb  createAutomatonPDF.sh  prepare-archive.sh  testfa.cc
resultatsMoulinette/: 01-Implem.txt  01-Tests.txt  02-Tests.txt  02-implem.txt  03-implem.txt  03-tests.txt  04-implem.txt  04-tests.txt  06-implem.txt  06-tests.txt
